infra/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: somoscasa
  labels:
    app: somoscasa
